#
#--------------------------------------------------------------------------
#
#		CHANGE LOG FOR THE LATEX2HTML RELEASE
#
# What is recorded here are changes to any file of the LaTeX2HTML release
# *meaningful to the user*, such as new options or files, important bug
# fixes etc.
# A more detailed log history can be found within the particular files, near
# the top.
#
#
#--------- v2018.3
#
#		- fix \sffamily
#		  https://bugs.debian.org/111441
#		- produce svg images using pdftocairo
#		- use latex preview package to produce cropped images.pdf
#		- pdflatex by default
#		- dvipng by default
#		- html 5
#		- unicode input and output by default
#		- Support for packages luainputenc and polyglossia
#		- Support for picture generation via pdflatex, lualatex
#		  or dvilualatex (options -use_pdftex, -use_luatex,
#		  -use_luadvi correspondingly)
#		- perl 5.26: unescaped brace
#		- polski.perl: no translation until \prefixing command 
#
#--------- v2018
#
#		- config: avoid warning "untie attempted"
#		- Handle . not in @INC for images.pl and internals.pl
#		- fix \graphicspath with relative path in preamble
#		  https://github.com/latex2html/latex2html/issues/40
#		- \providecommand should not redefine existing command
#		- Picture generation via dvipng
#		- KOI8-R, CP1251 and UTF-8 support for Russian 
#		- default to white background for rendering images.
#		  if $LATEX_COLOR set, pass as transparency color to pstoimg.
#		  https://bugs.debian.org/188024
#		- usepackage xcolor.  uses rgb black rather than cmyk black.
#		  fixes eqns appearing as dark grey rather than black.
#		- Fix stray comment mark: Issue #19
#
#--------- v2017.2
#
#		- print release date, remove RCS version numbers from banner
#
#--------- v2017
#
#		- remove old versions of floatflt.ins, latin9.def, url.sty
#		- default to no <address> element in footer
#		- Handle init file when . not in @INC
#		  https://bugs.debian.org/834420
#		- config: Handle . not in @INC
#		- Reproducible output.